--- a/thing1.css
+++ b/thing1.css
@@ -3,3 +3,10 @@ html, body {
   width: 100%;
   height: 100%;
 }
+#siteName:hover {
+  cursor: pointer;
+  color: #000;
+}
+#siteName {
+  color: #000;
+}
