--- a/thing1.css
+++ b/thing1.css
@@ -10,3 +10,14 @@ html, body {
 #siteName {
   color: #000;
 }
+#mainArea {
+  width: 100%;
+  height: 100%;
+}
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 100px;
+  border-top: 1px solid black;
+}
