--- a/thing1.css
+++ b/thing1.css
@@ -14,6 +14,10 @@ html, body {
   width: 100%;
   height: 100%;
 }
+#contentArea {
+  width: 100%;
+  border: 1px solid black;
+}
 #footer {
   position: absolute;
   bottom: 0;
