--- a/thing1.css
+++ b/thing1.css
@@ -3,11 +3,19 @@ html, body {
   width: 100%;
   height: 100%;
 }
+#header {
+  width: 100%;
+  border-bottom: 1px solid black;
+}
 #siteName:hover {
   cursor: pointer;
   color: #000;
 }
 #siteName {
+  color: #000;
+}
+#siteName a, #siteName a:visited {
+  text-decoration: none;
   color: #000;
 }
 #mainArea {
