--- a/thing1.css
+++ b/thing1.css
@@ -29,6 +29,7 @@ html, body {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 50px;
+  height: 24px;
   border-top: 1px solid black;
+  text-align: center;
 }
